Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84204

Qt 3D leaks FBO

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 5.15.1
    • 5.15.0 RC2
    • Qt3D
    • None

      Qt3D is not releasing all FBO on destruction. In cases you have your application load and unload a Qt 3D scene dynamically (e.g Loader { Scene3D {} }) this results in leaking the GPU memory associated with each FBO which could lead to huge GPU Ram allocations.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            seanharmer Sean Harmer
            lemire_p Paul Lemire
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes