Release rendertargets on destruction

We were only releasing them at runtime if they changed, but we should
also clean them up before we are destroyed.

Change-Id: Ibc3f37fba92e8be8381fd869af7f5747da87038a
Task-number: QTBUG-84204
Reviewed-by: Mike Krus <mike.krus@kdab.com>
(cherry picked from commit cfd8c4d06bc81028b055e6c3343d0d4b50793219)