src/plugins/renderers/opengl/graphicshelpers/submissioncontext_p.h
@@ -115,6 +115,7 @@ public:
     GLuint activeFBO() const { return m_activeFBO; }
     void activateRenderTarget(const Qt3DCore::QNodeId id, const AttachmentPack &attachments, GLuint defaultFboId);
     void releaseRenderTarget(const Qt3DCore::QNodeId id);
+    void releaseRenderTargets();
     QSize renderTargetSize(const QSize &surfaceSize) const;
     QImage readFramebuffer(const QRect &rect);
     void blitFramebuffer(Qt3DCore::QNodeId outputRenderTargetId, Qt3DCore::QNodeId inputRenderTargetId,
