src/plugins/renderers/opengl/renderer/renderer.cpp
@@ -625,6 +625,8 @@ void Renderer::releaseGraphicsResources()
             vao->destroy();
         }
 
+        m_submissionContext->releaseRenderTargets();
+
         m_frameProfiler.reset();
         context->doneCurrent();
     } else {
